Fixed padding on mobile.

--- a/_sass/_diaspora.scss
+++ b/_sass/_diaspora.scss
@@ -16,6 +16,9 @@ body.diaspora {
 
       .col-sm-3 {
         padding-left: 0; // Remove whitespace on left.
+        @media only screen and (max-width : 768px) {
+          padding-right: 0;
+        }
       }
 
       .blurb {
